--- a/Unnamed_Simulation.xhtml
+++ b/Unnamed_Simulation.xhtml
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet"  type="text/css" href="_ejs_library/css/ejss.css" />
-    <script src="_ejs_library/scripts/common_script.js"></script>
-    <script src="_ejs_library/scripts/textresizedetector.js"></script>
-    <script src="_ejs_library/ejsS.v1.min.js"></script>
+    <link rel="stylesheet"  type="text/css" href="ejs_library/css/ejss.css" />
+    <script src="ejs_library/scripts/common_script.js"></script>
+    <script src="ejs_library/scripts/textresizedetector.js"></script>
+    <script src="ejs_library/ejsS.v1.min.js"></script>
 <script type="text/javascript"><!--//--><![CDATA[//><!--
 /* _inputParameters: an object with different values for the model parameters */
 function Unnamed(_topFrame,_libraryPath,_codebasePath, _inputParameters) {
@@ -155,9 +155,12 @@ var _stringProperties = {};
 
   _model.addToInitialization(function() {
     if (!__pagesEnabled["Init Page"]) return;
-    x=0.0;  // > Initialization.Init Page:1
-    t=0.0;  // > Initialization.Init Page:2
-    v=1.0;  // > Initialization.Init Page:3
+    x=0.0;
+  // > Initialization.Init Page:1
+    t=0.0;
+  // > Initialization.Init Page:2
+    v=1.0;
+  // > Initialization.Init Page:3
   });
 
   _model.addToInitialization(function() {
@@ -568,7 +571,7 @@ function Unnamed_View_0 (_topFrame) {
     <div id="copyright_message">
       <div class="cc_left"  style="float:left">&#169; 2022, Author name. Compiled with EJS 6.01 (201013)
 </div>
-      <div class="cc_right" style="float:right">    Released under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.en_US"> <img alt="Creative Commons Attribution-NonCommercial-ShareAlike" src="_ejs_library/images/cc_icon.png" /> </a> license.</div>
+      <div class="cc_right" style="float:right">    Released under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.en_US"> <img alt="Creative Commons Attribution-NonCommercial-ShareAlike" src="ejs_library/images/cc_icon.png" /> </a> license.</div>
     </div>
   </div>
     <script type="text/javascript"><!--//--><![CDATA[//><!--
