--- a/index.xhtml
+++ b/index.xhtml
@@ -6,8 +6,8 @@
   </head>
   <body>
     <frameset cols="25%,*">
-      <frame src="spring_mass_Contents.xhtml" name="contents" scrolling="auto" target="_self" />
-      <frame src="spring_mass_Intro_1.html" name="central" scrolling="auto" target="_self" />
+      <frame src="sprmass/spring_mass_Contents.xhtml" name="contents" scrolling="auto" target="_self" />
+      <frame src="sprmass/spring_mass_Intro_1.html" name="central" scrolling="auto" target="_self" />
       <noframes>
         Gee! Your browser is really old and doesn't support frames. You better update!!!
       </noframes>
