--- a/sprmass/spring_mass_Intro_1.html
+++ b/sprmass/spring_mass_Intro_1.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Intro Page</title>
-    <link rel="stylesheet" type="text/css" href="_ejs_library/css/ejss.css"></link>
+    <link rel="stylesheet" type="text/css" href="ejs_library/css/ejss.css"></link>
   </head>
   <body > 
 
