--- a/sprmass/spring_mass_Simulation.xhtml
+++ b/sprmass/spring_mass_Simulation.xhtml
@@ -697,7 +697,7 @@ function spring_mass_View_0 (_topFrame) {
       var _scorm;
       window.addEventListener('load',
         function () { 
-          _model =  new spring_mass("_topFrame","_ejs_library/",null);
+          _model =  new spring_mass("_topFrame","ejs_library/",null);
           if (typeof _isApp !== "undefined" && _isApp) _model.setRunAlways(true);
           TextResizeDetector.TARGET_ELEMENT_ID = '_topFrame';
           TextResizeDetector.USER_INIT_FUNC = function () {
