--- a/index.xhtml
+++ b/index.xhtml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
-  <head>
-    <title> Home page for spring_mass</title>
-  </head>
-  <body>
-    <frameset cols="25%,*">
-      <frame src="sprmass/spring_mass_Contents.xhtml" name="contents" scrolling="auto" target="_self" />
-      <frame src="sprmass/spring_mass_Intro_1.html" name="central" scrolling="auto" target="_self" />
-      <noframes>
-        Gee! Your browser is really old and doesn't support frames. You better update!!!
-      </noframes>
-    </frameset> 
-  </body>
+<html 
+<h1>This site will serve as a repostiory for my physics simulations.</h1>
+
+<p>My first test simulation will be of a damped spring mass system.</p>
+
+<p><strong><a href="http://physsim.github.io/sprmass">Spring Mass Simulation</a></strong></p>
 </html>
