--- a/index.xhtml
+++ b/index.xhtml
@@ -1,5 +1,25 @@
-<h1>This site will serve as a repostiory for my physics simulations.</h1>
+<!-- 
+Online HTML, CSS and JavaScript editor to run code online.
+-->
+<!DOCTYPE html>
+<html lang="en">
 
-<p>My first test simulation will be of a damped spring mass system.</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Browser</title>
+</head>
 
-<p><strong><a href="http://physsim.github.io/sprmass">Spring Mass Simulation</a></strong></p>
+<body>
+  <h1>
+   This will serve as a site for my physics simulations.
+    The first simulation is of a spring mass system. Click the link below.
+  </h1>
+  <p>
+    <strong><a href="http://physsim.github.io/sprmass">Spring Mass Simulation</a></strong>
+  </p>
+  
+</body>
+
+</html>
