--- a/index.html
+++ b/index.html
@@ -4,22 +4,11 @@ Online HTML, CSS and JavaScript editor to run code online.
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>Browser</title>
-</head>
+<h1>&nbsp;</h1>
 
-<body>
-  <h1>
-   This will serve as a site for my physics simulations.
-    The first simulation is of a spring mass system. Click the link below.
-  </h1>
-  <p>
-    <strong><a href="http://physsim.github.io/sprmass">Spring Mass Simulation</a></strong>
-  </p>
-  
-</body>
+<h1>This site will serve as a repostiory for my physics simulations.</h1>
 
+<p>My first test simulation will be of a damped spring mass system.</p>
+
+<p><strong><a href="http://physsim.github.io/sprmass">Spring Mass Simulation</a></strong></p>
 </html>
